--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        " 'South Korea']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,10 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities = ['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang']"
@@ -145,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +163,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,10 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "countries_of_top_cities = ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', 'Argentina', 'Italy', 'Canada', 'South Korea']"
@@ -212,38 +208,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Solta',\n",
-       " 'Greenville',\n",
-       " 'Buenos Aires',\n",
-       " 'Los Cabos',\n",
-       " 'Walla Walla Valley',\n",
-       " 'Marakesh',\n",
-       " 'Albuquerque',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Salina Island',\n",
-       " 'Toronto',\n",
-       " 'Pyeongchang']"
+       "{'Croatia': 'Solta',\n",
+       " 'USA': 'Walla Walla Valley',\n",
+       " 'Argentina': 'Iguazu Falls',\n",
+       " 'Mexico': 'Los Cabos',\n",
+       " 'Morocco': 'Marakesh',\n",
+       " 'New Mexico': 'Albuquerque',\n",
+       " 'Finland': 'Archipelago Sea',\n",
+       " 'Italy': 'Salina Island',\n",
+       " 'Canada': 'Toronto',\n",
+       " 'South Korea': 'Pyeongchang'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities"
+    "zipped_top_cities=list(zip(countries_of_top_cities,top_travel_cities))\n",
+    "zipped_top_cities\n",
+    "top_cities_dict=dict(zipped_top_cities)\n",
+    "top_cities_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +249,7 @@
        "'Solta'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +278,7 @@
        "'Buenos Aires'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +305,7 @@
        "'Pyeongchang'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +332,7 @@
        "'Toronto'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +359,7 @@
        "'Toronto'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +380,7 @@
        "str"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +418,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +438,7 @@
        "list"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +472,7 @@
        "['Solta', 'Greenville']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +512,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +539,7 @@
        "['Walla Walla Valley']"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +566,7 @@
        "['Walla Walla Valley', 'Marakesh']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +604,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +631,7 @@
        "['Solta', 'Greenville']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,10 +664,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities.append('San Antonio')"
@@ -685,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +701,7 @@
        " 'San Antonio']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +741,7 @@
        " 'San Antonio']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -774,12 +769,13 @@
        "'San Antonio'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "top_travel_cities.pop()\n",
     "top_travel_cities.pop()"
    ]
   },
@@ -792,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +797,7 @@
        "'Walla Walla Valley'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,10 +808,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities[4] = 4"
@@ -823,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -840,11 +834,10 @@
        " 'Iguazu Falls',\n",
        " 'Salina Island',\n",
        " 'Toronto',\n",
-       " 'Pyeongchang',\n",
-       " 'San Antonio']"
+       " 'Pyeongchang']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,10 +855,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities[4] = 'Walla Walla Valley'"
@@ -880,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -897,11 +888,10 @@
        " 'Iguazu Falls',\n",
        " 'Salina Island',\n",
        " 'Toronto',\n",
-       " 'Pyeongchang',\n",
-       " 'San Antonio']"
+       " 'Pyeongchang']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,10 +916,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities.append('Solta')"
@@ -951,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -966,13 +954,12 @@
        " 'Marakesh',\n",
        " 'Pyeongchang',\n",
        " 'Salina Island',\n",
-       " 'San Antonio',\n",
        " 'Solta',\n",
        " 'Toronto',\n",
        " 'Walla Walla Valley'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +987,7 @@
        "set"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1026,9 +1013,9 @@
      "evalue": "'set' object does not support indexing",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m-------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-3d2453cad46e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique_travel_cities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-41-3d2453cad46e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique_travel_cities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'set' object does not support indexing"
      ]
     }
@@ -1046,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1042,7 @@
        "set"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,10 +1060,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [],
    "source": [
     "unique_travel_cities = list(unique_travel_cities)"
@@ -1084,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1078,7 @@
        "list"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,28 +1096,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Toronto',\n",
+       "['Los Cabos',\n",
+       " 'Walla Walla Valley',\n",
        " 'Archipelago Sea',\n",
        " 'Iguazu Falls',\n",
-       " 'Pyeongchang',\n",
-       " 'Los Cabos',\n",
        " 'Buenos Aires',\n",
-       " 'Marakesh',\n",
-       " 'Greenville',\n",
-       " 'Albuquerque',\n",
+       " 'Solta',\n",
        " 'Salina Island',\n",
-       " 'Walla Walla Valley',\n",
-       " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Albuquerque',\n",
+       " 'Toronto',\n",
+       " 'Marakesh',\n",
+       " 'Pyeongchang',\n",
+       " 'Greenville']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,16 +1134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "12"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,16 +1154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14"
+       "13"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,21 +1231,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
